--- a/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub1.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub1.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.8.0.final utlizzo versione della libreria JasperReports6.8.0-2ed8dfabb690ff337a5797129f2cd92902b0c87b  -->
+<!-- Created with Jaspersoft Studio version 6.9.0.final utlizzo versione della libreria JasperReports6.9.0-cb8f9004be492ccc537180b49c026951f4220bf3  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="m_inout_sub1" pageWidth="555" pageHeight="810" whenNoDataType="NoDataSection" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isIgnorePagination="true" uuid="c33fbd9b-fd01-4855-baf8-57a853bc8344">
 	<property name="ireport.zoom" value="1.6934217901613329"/>
 	<property name="ireport.x" value="0"/>
@@ -369,7 +369,7 @@ ORDER BY m_inoutline_line ASC]]>
 					<reportElement positionType="Float" x="488" y="0" width="67" height="11" uuid="464b5c09-9c8e-40b4-a238-f6adcc7d1ebc">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1f883e7f-cc62-46ec-ae69-e69dd0c98e00"/>
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
-						<printWhenExpression><![CDATA[$F{c_uom_trl_uomsymbol}.equals( "Nr" )]]></printWhenExpression>
+						<printWhenExpression><![CDATA[$F{c_uom_trl_uomsymbol}.equals( "NR" )]]></printWhenExpression>
 					</reportElement>
 					<box rightPadding="5"/>
 					<textElement textAlignment="Right" verticalAlignment="Top">
